--- a/backend/package.json
+++ b/backend/package.json
@@ -9,6 +9,7 @@
     "chalk": "^4.1.2",
     "colors": "^1.4.0",
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
     "ejs": "^3.1.6",
     "express": "~4.16.1",
